gccida/c3/dwarf2out_frame_debug
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2153:12: error: expected expression
*( _OWORD *)&cfa.offset = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2153:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&cfa.offset = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2169:1: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
cfa_temp_0 = -1LL; 
^~~~~~~~~~
cfa_temp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2169:12: error: assigning to 'dw_cfa_location' (aka 'struct cfa_loc') from incompatible type 'long long'
cfa_temp_0 = -1LL; 
           ^ ~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2228:7: error: use of undeclared identifier 'dwarf2out_cfi_label_label_num'
v19 = dwarf2out_cfi_label_label_num++; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2229:10: error: use of undeclared identifier 'dwarf2out_cfi_label_label'; did you mean 'dwarf2out_cfi_label'?
sprintf( dwarf2out_cfi_label_label, "*.%s%u", "LCFI", v19); 
         ^~~~~~~~~~~~~~~~~~~~~~~~~
         dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:540:1: note: 'dwarf2out_cfi_label' declared here
dwarf2out_cfi_label ()
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2230:39: error: use of undeclared identifier 'dwarf2out_cfi_label_label'; did you mean 'dwarf2out_cfi_label'?
assemble_name( ( FILE *)asm_out_file, dwarf2out_cfi_label_label); 
                                      ^~~~~~~~~~~~~~~~~~~~~~~~~
                                      dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:540:1: note: 'dwarf2out_cfi_label' declared here
dwarf2out_cfi_label ()
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2236:35: error: use of undeclared identifier 'dwarf2out_cfi_label_label'; did you mean 'dwarf2out_cfi_label'?
dwarf2out_frame_debug_expr( *fld, dwarf2out_cfi_label_label); 
                                  ^~~~~~~~~~~~~~~~~~~~~~~~~
                                  dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:540:1: note: 'dwarf2out_cfi_label' declared here
dwarf2out_cfi_label ()
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2246:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v34 = ( unsigned __int16 *)v1[2]; 
                           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2291:7: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
v4 = -args_size_0; 
      ^~~~~~~~~~~
      args_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2295:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v38 = (  struct rtx_def *)v1[2]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2329:6: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
v5 = args_size_0 + v4; 
     ^~~~~~~~~~~
     args_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2332:1: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
args_size_0 = v5; 
^~~~~~~~~~~
args_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2333:6: error: use of undeclared identifier 'dwarf2out_cfi_label_label_num'
v6 = dwarf2out_cfi_label_label_num++; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2334:10: error: use of undeclared identifier 'dwarf2out_cfi_label_label'; did you mean 'dwarf2out_cfi_label'?
sprintf( dwarf2out_cfi_label_label, "*.%s%u", "LCFI", v6); 
         ^~~~~~~~~~~~~~~~~~~~~~~~~
         dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:540:1: note: 'dwarf2out_cfi_label' declared here
dwarf2out_cfi_label ()
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2335:39: error: use of undeclared identifier 'dwarf2out_cfi_label_label'; did you mean 'dwarf2out_cfi_label'?
assemble_name( ( FILE *)asm_out_file, dwarf2out_cfi_label_label); 
                                      ^~~~~~~~~~~~~~~~~~~~~~~~~
                                      dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:540:1: note: 'dwarf2out_cfi_label' declared here
dwarf2out_cfi_label ()
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2337:12: error: use of undeclared identifier 'dwarf2out_cfi_label_label'; did you mean 'dwarf2out_cfi_label'?
def_cfa_1( dwarf2out_cfi_label_label, &cfa); 
           ^~~~~~~~~~~~~~~~~~~~~~~~~
           dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:540:1: note: 'dwarf2out_cfi_label' declared here
dwarf2out_cfi_label ()
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2338:6: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
v7 = args_size_0; 
     ^~~~~~~~~~~
     args_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:2339:23: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
if ( old_args_size != args_size_0 ) 
                      ^~~~~~~~~~~
                      args_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug/src/obj/dwarf2out.o] Error 1
